Add full logs